Overhauled OQS tests. (#180)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ localCheckout: &localCheckout
     PROJECT_PATH=$(cd ${CIRCLE_WORKING_DIRECTORY}; pwd)
     mkdir -p ${PROJECT_PATH}
     cd /tmp/_circleci_local_build_repo
-    git ls-files -z | xargs -0 -s 2090860 tar -c | tar -x -C ${PROJECT_PATH} 
+    git ls-files -z | xargs -0 -s 2090860 tar -c | tar -x -C ${PROJECT_PATH}
     cp -a /tmp/_circleci_local_build_repo/.git ${PROJECT_PATH}
 
 .openssl_job: &openssljob
@@ -17,18 +17,21 @@ localCheckout: &localCheckout
     - checkout # change this from "checkout" to "*localCheckout" when running CircleCI locally
     - run:
         name: Clone liboqs
-        command: (cd oqs_test && scripts/clone_liboqs.sh) # unconditional checkout to test for changes there
+        command: ./oqs-scripts/clone_liboqs.sh # unconditional checkout to test for changes there
     - run:
         name: Build liboqs
-        command: .circleci/git_no_checkin_in_last_day.sh || (cd oqs_test && scripts/build_liboqs.sh)
+        command: .circleci/git_no_checkin_in_last_day.sh || ./oqs-scripts/build_liboqs.sh
     - run:
         name: Build OpenSSL
-        command: .circleci/git_no_checkin_in_last_day.sh || (cd oqs_test && scripts/build_openssl.sh)
+        command: .circleci/git_no_checkin_in_last_day.sh || ./oqs-scripts/build_openssl.sh
     - run:
-        name: Run unit tests
-        command: mkdir -p oqs_test/test-results && .circleci/git_no_checkin_in_last_day.sh || (LD_LIBRARY_PATH="$(pwd):$(pwd)/oqs/lib" make test && cd oqs_test && LD_LIBRARY_PATH="$(dirname $PWD);$(dirname $PWD)/oqs/lib" python3 -m nose --rednose --verbose --with-xunit --xunit-file=test-results/nosetests.xml)
+        name: Run OpenSSL tests
+        command: .circleci/git_no_checkin_in_last_day.sh || make test
+    - run:
+        name: Run OQS connection and CMS tests
+        command: .circleci/git_no_checkin_in_last_day.sh || (env LD_LIBRARY_PATH="$(pwd):$(pwd)/oqs/lib" python3 -m pytest --numprocesses=8 oqs-test/test_conn_full.py oqs-test/test_cms.py)
     - store_test_results: # Note that this command will fail when running CircleCI locally, that is expected behaviour
-        path: oqs_test/test-results
+        path: oqs-test/tmp/test-results
 
 .macopenssl_job: &macopenssljob
     macos:
@@ -41,86 +44,54 @@ localCheckout: &localCheckout
               .circleci/git_no_checkin_in_last_day.sh || (
               brew update &&
               brew unlink python@2 &&
-              brew install cmake ninja doxygen astyle &&
-              pip3 install --user pytest pytest-xdist nose rednose
+              brew install cmake ninja &&
+              pip3 install --user pytest pytest-xdist
               )
         - run:
             name: Clone liboqs
-            command: (cd oqs_test && scripts/clone_liboqs.sh) # unconditional checkout
+            command: ./oqs-scripts/clone_liboqs.sh # unconditional checkout to test for changes there
         - run:
             name: Build liboqs
-            command: .circleci/git_no_checkin_in_last_day.sh || (cd oqs_test && scripts/build_liboqs.sh)
+            command: .circleci/git_no_checkin_in_last_day.sh || ./oqs-scripts/build_liboqs.sh
         - run:
             name: Build OpenSSL
-            command: .circleci/git_no_checkin_in_last_day.sh || (cd oqs_test && scripts/build_openssl.sh)
+            command: .circleci/git_no_checkin_in_last_day.sh || ./oqs-scripts/build_openssl.sh
         - run:
-            name: Run unit tests
-            command: mkdir -p oqs_test/test-results && .circleci/git_no_checkin_in_last_day.sh || (cd oqs_test && OQS_LIBPATH="$(dirname $PWD):$(dirname $PWD)/oqs/lib" python3 -m nose --rednose --verbose --with-xunit --xunit-file=test-results/nosetests.xml)
+            name: Run connection and CMS tests
+            command: .circleci/git_no_checkin_in_last_day.sh || (env DYLD_LIBRARY_PATH="$(pwd):$(pwd)/oqs/lib" python3 -m pytest --numprocesses=4 oqs-test/test_conn_full.py oqs-test/test_cms.py)
         - store_test_results: # Note that this command will fail when running CircleCI locally, that is expected behaviour
-            path: oqs_test/test-results
+            path: oqs-test/tmp/test-results
 
 jobs:
-  debian-buster-amd64:
+  debian_buster-shared_oqs-static_ossl:
     <<: *openssljob
     environment:
       IMAGE: openquantumsafe/ci-debian-buster-amd64:latest
-      ARCH: x64
-      LIBOQS: master
-      OPENSSL: 111
-  ubuntu-bionic-x86_64:
+      LIBOQS_LIBTYPE: shared
+  ubuntu_bionic-shared_oqs-shared_ossl:
     <<: *openssljob
     environment:
       IMAGE: openquantumsafe/ci-ubuntu-bionic-x86_64:latest
-      ARCH: x64
-      LIBOQS: master
-      OPENSSL: 111
-  ubuntu-bionic-x86_64-noconn:
+      LIBOQS_LIBTYPE: shared
+      OPENSSL_LIBTYPE: shared
+  ubuntu_bionic-static_oqs-static_ossl:
     <<: *openssljob
     environment:
       IMAGE: openquantumsafe/ci-ubuntu-bionic-x86_64:latest
-      ARCH: x64
-      LIBOQS: master
-      OPENSSL: 111
-      SKIP_TESTS: connection
-  ubuntu-bionic-x86_64-shared:
-    <<: *openssljob
-    environment:
-      IMAGE: openquantumsafe/ci-ubuntu-bionic-x86_64:latest
-      ARCH: x64
-      LIBOQS: master
-      OPENSSL: 111
-      LIBTYPE: shared
-  ubuntu-bionic-x86_64-shared-noconn:
-    <<: *openssljob
-    environment:
-      IMAGE: openquantumsafe/ci-ubuntu-bionic-x86_64:latest
-      ARCH: x64
-      LIBOQS: master
-      OPENSSL: 111
-      LIBTYPE: shared
-      SKIP_TESTS: connection
-  macOS-shared-noconn:
+  macOS-shared_oqs-shared_ossl:
     <<: *macopenssljob
     environment:
-      LIBTYPE: shared
-      SKIP_TESTS: connection
-  macOS-shared:
+      LIBOQS_LIBTYPE: shared
+      OPENSSL_LIBTYPE: shared
+  macOS-static_oqs-static_ossl:
     <<: *macopenssljob
-    environment:
-      LIBTYPE: shared
-  macOS-static:
-    <<: *macopenssljob
-    environment:
-      LIBTYPE: no-shared
-      SKIP_TESTS: connection
 
 workflows:
   version: 2
   build:
     jobs:
-      - macOS-shared-noconn    
-      - ubuntu-bionic-x86_64-shared
-      - ubuntu-bionic-x86_64-noconn
+      - macOS-shared_oqs-shared_ossl
+      - ubuntu_bionic-static_oqs-static_ossl
   nightly:
     triggers:
       - schedule:
@@ -130,9 +101,9 @@ workflows:
               only:
                 - OQS-OpenSSL_1_1_1-stable
     jobs:
-      - macOS-shared    
-      - debian-buster-amd64
-      - macOS-static    
-      - ubuntu-bionic-x86_64-shared-noconn
-      - ubuntu-bionic-x86_64
+      - macOS-shared_oqs-shared_ossl
+      - macOS-static_oqs-static_ossl
+      - debian_buster-shared_oqs-static_ossl
+      - ubuntu_bionic-shared_oqs-shared_ossl
+      - ubuntu_bionic-static_oqs-static_ossl
 
