--- a/Configurations/10-main.conf
+++ b/Configurations/10-main.conf
@@ -1165,6 +1165,7 @@ my %targets = (
         module_ldflags   => "-Wl,-G,-bsymbolic,-bnoentry",
         shared_ldflag    => "-Wl,-G,-bsymbolic,-bnoentry",
         shared_defflag   => "-Wl,-bE:",
+        shared_fipsflag  => "-Wl,-binitfini:init:cleanup,-bE:",
         perl_platform    => 'AIX',
     },
     "aix-gcc" => {
