--- a/oqs-template/generate.yml
+++ b/oqs-template/generate.yml
@@ -181,24 +181,6 @@ kems:
     nid_hybrid_p256: "0x2F22"
     oqs_alg: "OQS_KEM_alg_sike_p751"
     bit_security: 256
-  # -
-  #   name_group: "ledacryptkemlt12"
-  #   nid: "0x0226"
-  #   nid_hybrid_p256: "0x2F26"
-  #   oqs_alg: "OQS_KEM_alg_ledacrypt_ledakemlt12"
-  #   bit_security: 128
-  # -
-  #   name_group: "ledacryptkemlt32"
-  #   nid: "0x0227"
-  #   nid_hybrid_p256: "0x2F27"
-  #   oqs_alg: "OQS_KEM_alg_ledacrypt_ledakemlt32"
-  #   bit_security: 192
-  # -
-  #   name_group: "ledacryptkemlt52"
-  #   nid: "0x0228"
-  #   nid_hybrid_p256: "0x2F28"
-  #   oqs_alg: "OQS_KEM_alg_ledacrypt_ledakemlt52"
-  #   bit_security: 256
   -
     name_group: "kyber90s512"
     nid: "0x0229"
@@ -310,6 +292,12 @@ sigs:
         oqs_meth: "OQS_SIG_alg_dilithium_3"
         security: 128
         oid: "1.3.6.1.4.1.2.267.6.5.4"
+        mix_with: [{"name": "p256",
+                    "pretty_name": "ECDSA p256",
+                    "oid": "1.3.9999.2.4"},
+                   {"name": "rsa3072",
+                    "pretty_name": "RSA3072",
+                    "oid": "1.3.9999.2.5"}]
       -
         name: "dilithium4"
         pretty_name: "Dilithium-4"
@@ -319,6 +307,51 @@ sigs:
         mix_with: [{"name": "p384",
                     "pretty_name": "ECDSA p384",
                     "oid": "1.3.9999.2.6"}]
+  -
+    # iso (1)
+    # identified-organization (3)
+    # reserved (9999)
+    # falcon (3)
+    variants:
+      -
+        name: "falcon512"
+        pretty_name: "Falcon-512"
+        oqs_meth: "OQS_SIG_alg_falcon_512"
+        security: 128
+        oid: "1.3.9999.3.1"
+        mix_with: [{"name": "p256",
+                    "pretty_name": "ECDSA p256",
+                    "oid": "1.3.9999.3.2"},
+                   {"name": "rsa3072",
+                    "pretty_name": "RSA3072",
+                    "oid": "1.3.9999.3.3"}]
+      -
+        name: "falcon1024"
+        pretty_name: "Falcon-1024"
+        oqs_meth: "OQS_SIG_alg_falcon_1024"
+        security: 256
+        oid: "1.3.9999.3.4"
+        mix_with: [{"name": "p521",
+                    "pretty_name": "ECDSA p521",
+                    "oid": "1.3.9999.3.5"}]
+  -
+    # iso (1)
+    # identified-organization (3)
+    # reserved (9999)
+    # mqdss (4)
+    variants:
+      -
+        name: "mqdss3148"
+        pretty_name: "MQDSS-31-48"
+        oqs_meth: "OQS_SIG_alg_mqdss_31_48"
+        security: 128
+        oid: "1.3.9999.4.1"
+        mix_with: [{"name": "p256",
+                    "pretty_name": "ECDSA p256",
+                    "oid": "1.3.9999.4.2"},
+                   {"name": "rsa3072",
+                    "pretty_name": "RSA3072",
+                    "oid": "1.3.9999.4.3"}]
   -
     # iso (1)
     # identified-organization (3)
