Introduced NIST security level dependent KEM hybrids (#207).

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -138,4 +138,5 @@ workflows:
       - macOS-shared_oqs-shared_ossl
       - macOS-static_oqs-static_ossl
       - ubuntu_bionic-shared_oqs-shared_ossl
+      - ubuntu_bionic-static_oqs-static_ossl
       - ubuntu_bionic-static_oqs-static_ossl-boringssl-interop
