Don't use master/slave; finish whitelist/blacklist
Replaced "master" DRBG with "pimary."  Fixed some markup with <private>,
etc., in some DRBG pages; use I<private>, etc.  Looking for master finds
many false positives because of TLS concepts like "master key" and such,
but I believe I fixed all. Add compat macro for the old name.

To minimize false positives, replace "white space" with "whitespace"
and teach find-doc-nits to prefer the latter. (This was partially done in
commit 6f72b210, but this finished the job.)

Replace "blacklist" with "block list" and "black magic" comments with
"magic."

--- a/doc/man1/openssl-asn1parse.pod.in
+++ b/doc/man1/openssl-asn1parse.pod.in
@@ -156,8 +156,9 @@ be examined using the option C<-strparse 229> to yield:
 If an OID is not part of OpenSSL's internal table it will be represented in
 numerical form (for example 1.2.3.4). The file passed to the B<-oid> option
 allows additional OIDs to be included. Each line consists of three columns,
-the first column is the OID in numerical format and should be followed by white
-space. The second column is the "short name" which is a single word followed
+the first column is the OID in numerical format and should be followed by
+whitespace. The second column is the "short name" which is a single word
+followed
 by whitespace. The final column is the rest of the line and is the
 "long name". Example:
 
