fixup! Chunk 12 of CMP contribution to OpenSSL: CLI-based high-level tests
81-test_cmp_cli.t: replace server_cn amd server_ip by server_host

--- a/test/recipes/81-test_cmp_cli_data/Mock/test.cnf
+++ b/test/recipes/81-test_cmp_cli_data/Mock/test.cnf
@@ -16,12 +16,11 @@ policies = certificatePolicies
 
 [Mock] # the built-in OpenSSL CMP mock server
 no_check_time = 1
-server_cn = localhost
-server_ip = 127.0.0.1
+server_host = 127.0.0.1 # localhost
 server_port = 1700
 server_tls = 0
 server_cert = server.crt
-server = $server_cn:$server_port
+server = $server_host:$server_port
 server_path = pkix/
 path = $server_path
 ca_dn = /O=openssl_cmp
