--- a/Configurations/10-main.conf
+++ b/Configurations/10-main.conf
@@ -1292,8 +1292,8 @@ my %targets = (
         inherit_from     => [ "VC-common" ],
         template         => 1,
         CFLAGS           => add(picker(debug   => '/Od',
-                                       release => '/O2')),
-        cflags           => add(picker(default => '/Gs0 /GF /Gy',
+                                       release => '/O2 /GF')),
+        cflags           => add(picker(default => '/Gy',
                                        debug   =>
                                        sub {
                                            ($disabled{shared} ? "" : "/MDd");
@@ -1378,11 +1378,11 @@ my %targets = (
     "VC-CE" => {
         inherit_from     => [ "VC-common" ],
         CFLAGS           => add(picker(debug   => "/Od",
-                                       release => "/O1i")),
+                                       release => "/O1i /GF")),
         CPPDEFINES       => picker(debug   => [ "DEBUG", "_DEBUG" ]),
         LDFLAGS          => add("/nologo /opt:ref"),
         cflags           =>
-            combine('/GF /Gy',
+            combine('/Gy',
                     sub { vc_wince_info()->{cflags}; },
                     sub { `cl 2>&1` =~ /Version ([0-9]+)\./ && $1>=14
                               ? ($disabled{shared} ? " /MT" : " /MD")
