--- a/test/default.cnf
+++ b/test/default.cnf
@@ -1,10 +1,1 @@
-openssl_conf = openssl_init
-
-[openssl_init]
-providers = provider_sect
-
-[provider_sect]
-default = default_sect
-
-[default_sect]
-activate = 1
+# This file intentionally left empty.
