Add no-static-crt option which allows to build static libraries using Microsoft compilers without mandatory linkage to static MSVCRT

--- a/Configurations/10-main.conf
+++ b/Configurations/10-main.conf
@@ -1296,15 +1296,17 @@ my %targets = (
         cflags           => add(picker(default => '/Gs0 /GF /Gy',
                                        debug   =>
                                        sub {
-                                           ($disabled{shared} ? "" : "/MDd");
+                                           ($disabled{shared} && !$disabled{"static-crt"} ? () : "/MDd");
                                        },
                                        release =>
                                        sub {
-                                           ($disabled{shared} ? "" : "/MD");
+                                           ($disabled{shared} && !$disabled{"static-crt"} ? () : "/MD");
                                        })),
         defines          => add(picker(default => [], # works as type cast
                                        debug   => [ "DEBUG", "_DEBUG" ])),
-        lib_cflags       => add(sub { $disabled{shared} ? "/MT /Zl" : () }),
+        lib_cflags       => add(sub {
+                                    ($disabled{shared} && !$disabled{"static-crt"} ? "/MT /Zl" : ());
+                                }),
         # Following might/should appears controversial, i.e. defining
         # /MDd without evaluating $disabled{shared}. It works in
         # non-shared build because static library is compiled with /Zl
@@ -1317,8 +1319,10 @@ my %targets = (
         # prefer [non-debug] openssl.exe to be free from Micorosoft RTL
         # redistributable.
         bin_cflags       => add(picker(debug   => "/MDd",
-                                       release => sub { $disabled{shared} ? "/MT" : () },
-                                      )),
+                                       release =>
+                                       sub {
+                                           ($disabled{shared} && !$disabled{"static-crt"} ? "/MT" : ());
+                                       })),
         bin_lflags       => add("/subsystem:console /opt:ref"),
         ex_libs          => add(sub {
             my @ex_libs = ();
