--- a/.travis.yml
+++ b/.travis.yml
@@ -218,6 +218,7 @@ before_script:
           fi;
       fi
     - ./configdata.pm --dump
+    - export HARNESS_JOBS=${HARNESS_JOBS:-4}
     - cd $top
 
 script:
